# LanChat-Next

./: .gitignore  CLAUDE.md  CMakeLists.txt  CODEX.md  DEVELOPMENT_PLAN.md  README.md  build_legacy.bat  launch.bat  launch.vbs
.claude/skills/codebase-health-audit/: SKILL.md
docs/: CLAUDE_CODE_SYNC.md  CODEX_SKILLS_MCP.md  CURSOR_CHECKPOINT.md  CURSOR_UI_SCOPE.md  CURSOR_V1_1_0_SCOPING.md  DEPENDENCIES_V1_1_5.md  LEGACY_API.md  MIGRATION_NOTES.md  NEXT_STEPS_V1_1_3.md  REACT_BITS_UI_SYNC.md  ROADMAP_v2.0.0.md  V1_0_5_CHECKPOINT.md  V1_1_0_BLUEPRINT.md  V1_1_5_CHECKPOINT.md  V1_1_X_STABILIZATION.md  V1_2_5_CHECKPOINT.md  V1_8_0_CHECKPOINT.md  V1_9_0_BLOCKER_BURNDOWN.md  V1_9_0_CHECKPOINT.md  V2_0_0_A1_CHECKPOINT.md  agent-reach-research-v1.5.md  audit-report-2026-05-29.md  audit-report-2026-05-30-v1.9.0.md  audit-report-2026-05-30-v2.0.0-a1.md  audit-report-2026-05-30.md
docs/superpowers/specs/: 2026-05-29-v1.6.0-v1.7.0-redesign.md
legacy/: README.md
legacy/legacy-common/: LegacyLogger.cpp  LegacyLogger.h  LegacyProtocolCodec.h
legacy/original-client/: ChatDialog.cpp  CreateGroupDialog.cpp  GroupChatDialog.cpp  GroupChatDialog.h  HHClient.pro  HHTcpSocket.cpp  HHTcpSocket.h  LoginDialog.cpp  MainWindow.cpp  MainWindow.h  MsgBuilder.h  MsgMarke.ui  RegisterDialog.cpp  SearchGroupDialog.cpp  SearchGroupDialog.h  chatdialog.ui  creategroupdialog.ui  dark_theme.qss  frienditem.ui  groupchatdialog.ui  light_theme.qss  logindialog.ui  mainwindow.ui  registerdialog.ui  searchgroupdialog.ui
legacy/original-server/: HHServer.pro  MainWindow.cpp  MainWindow.h  MessageDao.cpp  MessageDao.h  MsgBuilder.cpp  MsgBuilder.h  NetworkThread.cpp  NetworkThread.h  PasswordHash.h  UserDao.cpp  UserDao.h
protocol/: message_types.h  message_types.ts  protocol_definitions.json
protocol/schemas/: aiRequest.schema.json  aiResponse.schema.json  aiStreamChunk.schema.json  createGroup.schema.json  createGroupReturn.schema.json  fileTransferDone.schema.json  friendAccept.schema.json  friendAcceptReturn.schema.json  friendList.schema.json  friendListReturn.schema.json  friendOnline.schema.json  friendRemove.schema.json  friendRemoveReturn.schema.json  friendRequest.schema.json  friendRequestAck.schema.json  heartbeat.schema.json  heartbeatAck.schema.json  historyResponse.schema.json  joinGroup.schema.json  joinGroupReturn.schema.json  leaveGroup.schema.json  login.schema.json  loginFailedReturn.schema.json  loginSuccessReturn.schema.json  logout.schema.json  messageDelete.schema.json  messageDeleteReturn.schema.json  messageEdit.schema.json  messageEditReturn.schema.json  messageReaction.schema.json  messageReactionReturn.schema.json  offlineMessages.schema.json  protocolHello.schema.json  readReceipt.schema.json  receiveFile.schema.json  receiveGroupMsg.schema.json  receiveMsg.schema.json  registerUser.schema.json  registerUserReturn.schema.json  requestHistory.schema.json  (+11 more)
scripts/: audit_protocol.mjs  build.ps1  configure.ps1  e2e_protocol_smoke.mjs  generate_protocol.mjs  launch.ps1  load_smoke.mjs  pre_pr_gate.ps1  seed_users.json  verify_v1_1_5.ps1  verify_v1_2_5.ps1  verify_v1_8_0.ps1  verify_v1_9_0.ps1  verify_v2_0_0_a1.ps1
src/client/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
src/client/src/: App.tsx  main.tsx
src/client/src-tauri/: Cargo.toml  tauri.conf.json
src/client/src-tauri/capabilities/: default.json
src/client/src-tauri/src/: commands.rs  lib.rs  main.rs  message_codec.rs  notifications.rs  secure_store.rs  tcp_manager.rs
src/client/src/components/: AppSplash.tsx  ChatArea.tsx  ConnectionBar.tsx  ContactList.tsx  ContactRow.tsx  ContactSkeleton.tsx  FriendRequestRow.tsx  GroupChatArea.tsx  GroupRow.tsx  HeaderActions.tsx  LoginPanel.tsx  ReconnectBanner.tsx  RegisterPanel.tsx  ShellFade.tsx  Sidebar.tsx
src/client/src/hooks/: useChatInput.ts  useChatScroll.ts
src/client/src/lib/: AnimatedContent.tsx  AnimatedList.tsx  BorderGlow.tsx  ChatComponents.tsx  ClickSpark.tsx  Counter.tsx  ErrorBoundary.tsx  FadeContent.tsx  GradientText.tsx  ShinyText.tsx  SpotlightCard.tsx  TextType.tsx  Toast.tsx  nativeNotifications.ts  offlineQueue.test.ts  offlineQueue.ts  protocol.ts  scrollLogic.ts  secureStorage.test.ts  secureStorage.ts  theme.ts  tryParseType.ts  utils.tsx
src/client/src/lib/ai/: AIService.ts  types.ts  useAI.ts
src/client/src/lib/ai/providers/: ClaudeAPI.ts  DeepSeekAPI.ts  LocalSearch.ts
src/client/src/lib/i18n/: en.ts  index.ts  types.ts  zh.ts
src/client/src/stores/: authStore.ts  chatStore.ts  connectionStore.ts  friendStore.ts  messageStore.ts  searchStore.ts  types.ts  uiStore.ts
src/client/src/styles/: global.css
src/server/: CMakeLists.txt
src/server/config/: server_config.json
src/server/include/lanchat/server/: AsyncSession.h  FrameCodec.h  LanChatServer.h  MessageRouter.h  Net.h  PresenceManager.h  ProtocolJson.h  ServerLogger.h  SessionPool.h  TcpServer.h
src/server/include/lanchat/server/db/: ChannelRepository.h  Database.h  FriendRepository.h  LegacyMigrator.h  MessageRepository.h  UserRepository.h
src/server/src/: AsyncSession.cpp  FrameCodec.cpp  LanChatServer.cpp  MessageRouter.cpp  PresenceManager.cpp  ServerLogger.cpp  SessionPool.cpp  TcpServer.cpp  main.cpp
src/server/src/db/: ChannelRepository.cpp  Database.cpp  FriendRepository.cpp  LegacyMigrator.cpp  MessageRepository.cpp  UserRepository.cpp
tests/: legacy_protocol_smoke.py  server_multi_client_smoke.mjs  server_v1_2_5_load.mjs
tests/cpp/: asio_transport_tests.cpp  database_tests.cpp  frame_codec_tests.cpp  friend_repository_tests.cpp  message_repository_tests.cpp  presence_manager_tests.cpp  protocol_json_tests.cpp
