[package]
name = "lanchat-next-client"
version = "1.6.0"
edition = "2021"

[lib]
name = "lanchat_next_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "sync", "rt-multi-thread"] }

